--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,37 @@
 {
-  "name": "bergil/docker-behat",
+  "name": "idvitos/docker-behat",
   "minimum-stability": "stable",
   "require": {
-    "behat/behat": "3.1.0",
-    "behat/mink": "1.7.1",
-    "behat/mink-extension": "2.2",
-    "behat/mink-goutte-driver": "1.2.1",
-    "behat/mink-selenium2-driver": "1.3.1",
-    "drupal/drupal-extension": "3.2.2",
-    "guzzlehttp/guzzle": "6.2.1",
-    "phpunit/phpunit": "5.5.5",
-    "fzaninotto/faker": "1.6.0",
-    "bossa/phpspec2-expect": "2.0.0",
-    "vanare/behat-cucumber-json-formatter": "1.1.1"
-  },
-  "config": {
-    "bin-dir": "bin/"
-  }
+    "php": ">=5.3.3",
+    "ext-mbstring": "*",
+    "behat/gherkin": "^4.4.4",
+    "behat/transliterator": "^1.2",
+    "symfony/console": "~2.5||~3.0",
+    "symfony/config": "~2.3||~3.0",
+    "symfony/dependency-injection": "~2.1||~3.0",
+    "symfony/event-dispatcher": "~2.1||~3.0",
+    "symfony/translation": "~2.3||~3.0",
+    "symfony/yaml": "~2.1||~3.0",
+    "symfony/class-loader": "~2.1||~3.0",
+    "container-interop/container-interop": "^1.1",
+    "behat/behat": "^3.3",
+    "behat/mink": "~1.7.1",
+    "behat/mink-goutte-driver": "~1.2.1",
+    "behat/mink-extension": "~2.2",
+    "guzzlehttp/guzzle": "~6.2.3",
+    "behat/mink-selenium2-driver": "~1.3.1",
+    "vanare/behat-cucumber-json-formatter": "~1.1.1",
+    "behat/symfony2-extension": "*",
+    "phpunit/phpunit": "6.1.4"
+    },
+
+  "autoload": {
+    "psr-0": {
+        "Behat\\Behat": "src/",
+        "Behat\\Testwork": "src/"
+        }
+    },
+
+  
+  "bin": ["bin/behat"]
 }
